remove old files

--- a/appspec.yml
+++ b/appspec.yml
@@ -10,6 +10,10 @@ hooks:
     - location: stop_container.sh
       timeout: 300
       runas: root
+  BeforeInstall:
+    - location: cleanup_old_files.sh
+      timeout: 300
+      runas: root
   AfterInstall:
     - location: start_container.sh
       timeout: 300
